openshift/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: devshift-fileserve
  labels:
    name: devshift-fileserve
spec:
  strategy:
    type: Recreate
  triggers:
    - type: ConfigChange
  replicas: 1
  selector:
    name: devshift-fileserve
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: devshift-fileserve
    spec:
      containers:
        - name: devshift-monitor-fileserve
          image: 'jfchevrette/devshift-fileserve:latest'
          args:
            - /etc/hostname
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 32Mi
            requests:
              cpu: 500m
              memory: 32Mi
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
