openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devshift-fileserve
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    name: devshift-fileserve
  type: ClusterIP
  sessionAffinity: None
